# Ozon

./: .gitignore  architecture.md  package.json  shortcuts.md  tailwind.config.ts
algorithim/: Cargo.toml
algorithim/src/: main.rs  proto.rs
app/: globals.css  layout.tsx
components/: Calculator.tsx
components/calculator/: types.ts
components/calculator/hooks/: useExpressionLogic.ts  useGraphEngine.ts
components/calculator/ui/: GraphLegend.tsx  Sidebar.tsx
docs/: docs_1.md
service/: algo.py  build_rust.ps1  eval.py  pyproject.toml  test.py
service/fast_math_rs/: Cargo.toml  README.md  pyproject.toml
service/fast_math_rs/src/: lib.rs
ui/: GraphArea.tsx  GraphLegend.tsx  Header.tsx  Sidebar.tsx
utils/: colors.ts  latex-parser.ts  symbolic-math.ts
